--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,32 @@
-.App {
-  text-align: center;
+#result {
+  color: #666666;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.DatePicker {
+  width: 90%;
+  margin: 1em auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width:500px) {
+  .DatePicker {
+    width: 95%;
+    margin: 1em auto;
   }
 }
+
+@media (max-width:330px) {
+  .DatePicker {
+    width: 100%;
+    margin: 1em auto;
+  }
+}
+
+.main_logo {
+  margin-top: 100px;
+}
+
+.icon {
+  display: block;
+  margin: auto;
+}
+
